up to the point I am happy with the navs except home where I am having z-indexing issues.

--- a/server/public/main.css
+++ b/server/public/main.css
@@ -529,7 +529,7 @@ a:visited {
     right: 0;
     background: rgba(0, 0, 0, 0.9);
     transition: opacity 500ms;
-    z-index: 1;
+    z-index: 100;
   }
   
 
@@ -537,6 +537,7 @@ a:visited {
   
   #navPopup-close {
     position: fixed;
+    display: block;
     margin-left: 40px;
     transition: all 200ms;
     font-size: 5rem;
@@ -544,7 +545,7 @@ a:visited {
     text-decoration: none;
       color: yellow;
       cursor: pointer;
-      z-index: 1;
+      z-index: 101;
   }
   
   #navPopup-close:hover {
